<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_art_alert"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="25dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edit_titulo"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:textAlignment="textStart"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/Titulo"
                android:textColor="@color/grey"
                android:inputType="text"
                android:background="@drawable/custom_formulario_articulos_creados"
                android:importantForAutofill="no" />
            <EditText
                android:id="@+id/edit_contenido"
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:textAlignment="textStart"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:hint="@string/Contenido"
                android:background="@drawable/custom_formulario_articulos_creados"
                android:inputType="textMultiLine"
                android:textColor="@color/grey"
                android:lines="20"
                app:layout_constraintTop_toBottomOf="@id/edit_titulo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/edit_autor"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:textAlignment="textStart"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:hint="@string/Author"
                android:background="@drawable/custom_formulario_articulos_creados"
                android:inputType="text"
                android:textColor="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/edit_contenido"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/edit_fecha"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:textAlignment="textStart"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:hint="@string/Fecha"
                android:background="@drawable/custom_formulario_articulos_creados"
                android:inputType="datetime"
                android:textColor="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/edit_autor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:importantForAutofill="no" />

          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintHorizontal_weight="2"
              app:layout_constraintTop_toBottomOf="@id/edit_fecha"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              android:layout_marginBottom="20dp"
              android:layout_marginTop="10dp"
              >

              <androidx.appcompat.widget.AppCompatButton
                  android:id="@+id/boton_Cancelar"
                  android:layout_width="142dp"
                  android:layout_height="wrap_content"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  android:text="@string/Cancelar"
                  android:drawableStart="@drawable/ic_delete"
                  android:backgroundTint="@color/color_textos_verde"
                  android:background="@drawable/custom_button"
                  android:textColor="@color/white"
                  android:drawablePadding="5dp"
                  android:paddingStart="10dp"
                  android:paddingEnd="20dp"
                  />

              <androidx.appcompat.widget.AppCompatButton
                  android:id="@+id/boton_Guardar"
                  android:layout_width="142dp"
                  android:layout_height="wrap_content"
                  app:layout_constraintStart_toEndOf="@id/boton_Cancelar"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginStart="15dp"
                  android:text="@string/Guardar_articulo"
                  android:textColor="@color/white"
                  android:backgroundTint="@color/color_textos_verde"
                  android:background="@drawable/custom_button"
                  android:drawableStart="@drawable/ic_save"
                  android:drawablePadding="5dp"
                  android:paddingStart="10dp"
                  android:paddingEnd="20dp"

                  />

          </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_icon_alert"
        app:srcCompat="@drawable/ic_article"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:translationZ="30dp"
        app:layout_constraintBottom_toTopOf="@id/card_art_alert"
        app:layout_constraintTop_toTopOf="@id/card_art_alert"
        app:layout_constraintStart_toStartOf="@id/card_art_alert"
        app:layout_constraintEnd_toEndOf="@id/card_art_alert"
        tools:ignore="RtlSymmetry" />


</androidx.constraintlayout.widget.ConstraintLayout>