<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/my_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fondo_verde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background_fondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/backgroun_superior_fondo"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_articulos_api"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="20dp"
            app:cardElevation="25dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-6dp"
                >
                <TextView
                    android:id="@+id/texto_articulos_android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/articulos_android"
                    android:textColor="@color/color_textos_verde"
                    android:textSize="25sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="7dp"
                    />

                <ImageView
                    android:id="@+id/ic_android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_android"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintTop_toBottomOf="@id/texto_articulos_android"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />


                <Button
                    android:id="@+id/btn_ver_mas_articulos"
                    android:layout_width="312dp"
                    android:layout_height="60dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ic_android"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="-160dp"
                    android:backgroundTint="@color/color_textos_verde"
                    android:text="@string/btn_ver_mas"
                    android:textColor="@color/white"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_articulos_api">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-6dp">

            <TextView
                android:id="@+id/texto_creados_articulos_android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="20dp"
                android:text="@string/articulos_creados"
                android:textColor="@color/color_textos_verde"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_articulos_creados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_articulos_creados"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/texto_creados_articulos_android" />

            <Button
                android:id="@+id/btn_ver_mas_articulos_creados"
                android:layout_width="314dp"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="-160dp"
                android:backgroundTint="@color/color_textos_verde"
                android:text="@string/btn_ver_mas"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ic_articulos_creados" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
